# Python-project

./: LICENSE  Python_Tutorial_for_Fiifi.ipynb  README.md
.github/workflows/: gh-pages.yml
docs/: app.js  index.html  styles.css
simple-todo-app/: README.md  pyproject.toml
simple-todo-app/src/simple_todo/: __init__.py  cli.py  main.py  models.py  storage.py  utils.py
simple-todo-app/tests/: test_todo.py
