[tool.poetry]
name = "simple-todo-app"
version = "0.1.0"
description = "A simple to-do application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"  # For CLI functionality

[tool.poetry.dev-dependencies]
pytest = "^6.0"  # For testing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"